Major css and html updates, using json for item storage now.

--- a/RVFS/RVFS/templates/rvfsite/404.html
+++ b/RVFS/RVFS/templates/rvfsite/404.html
@@ -1,4 +1,12 @@
 {% extends 'rvfsite/base.html' %}
-{% block body %}
 
+{% block title %}
+404 Page not Found
+{% endblock %}
+
+{% block body %}
+<div class="jumbotron page-404">
+    <h1 class="text-standard">404</h1>
+    <p class="text-standard">The page you are looking for is either still in the shop or does not exist!</p>
+</div>
 {% endblock %}
