--- a/RVFS/account/templates/gallery.html
+++ b/RVFS/account/templates/gallery.html
@@ -8,11 +8,15 @@
 
 {% block body %}
 
-<h1 class="gallery-title">{{ gallery }}</h1>
+<h1 class="gallery-title text-standard">{{ gallery }}</h1>
 
 <div class="row gallery-row">
 {% for photo in photos %}
-<a class="card gallery-images" data-toggle="modal" data-target="#exampleModal{{ forloop.counter }}"><img src="{{ photo.webContentLink }}" height="250" width="250"></a>
+<a class="card gallery-card d-flex h-100" data-toggle="modal" data-target="#exampleModal{{ forloop.counter }}">
+  <div class="align-self-center card-block">
+    <img class="gallery-image" src="{{ photo.webContentLink }}">
+  </div>
+</a>
 
 <div class="col modal fade" id="exampleModal{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
@@ -21,7 +25,7 @@
         <img class="lightbox-img" src="{{ photo.webContentLink}}">
       </div>
       <div class="modal-footer">
-        <h3>{{ photo.name }}</h3>
+        <h3 class="text-standard">{{ photo.name }}</h3>
       </div>
     </div>
   </div>
