--- a/RVFS/catalog/templates/edit_service.html
+++ b/RVFS/catalog/templates/edit_service.html
@@ -3,27 +3,28 @@
 {% block title %}Edit a Service{% endblock %}
 
 {% block body %}
-<h2>Edit a Service</h2>
-    <form class="prod-form" method="post">
+<h2 class="text-standard">Edit a Service</h2>
+    <form class="item-form" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <div class="row">
         {% for field in form %}
             {% if forloop.counter == 1 %}
             <div class="col">
-            <h4>{{ field.label }}:</h4>
-            <p>{{ field }}</p>
+            <h4 class="text-standard">{{ field.label }}:</h4>
+            <img class="form-image" src="{{ field.value.url }}">
+            <p class="textarea-form">{{ field }}</p>
             {% elif forloop.counter == 9 %}
             </div>
             <div class="col">
-            <h4>{{ field.label }}:</h4>
-            <p>{{ field }}</p>
+            <h4 class="text-standard">{{ field.label }}:</h4>
+            <p class="textarea-form">{{ field }}</p>
             {% else %}
-            <h4>{{ field.label }}:</h4>
-            <p>{{ field }}</p>
+            <h4 class="text-standard">{{ field.label }}:</h4>
+            <p class="textarea-form">{{ field }}</p>
             {% endif %}
         {% endfor %}
         </div>
         </div>
-        <input class="button" type="submit" value="Submit">
+        <input class="button text-standard" type="submit" value="Update">
     </form>
 {% endblock %}
