--- a/RVFS/catalog/templates/service.html
+++ b/RVFS/catalog/templates/service.html
@@ -6,24 +6,24 @@
 {% block body %}
 <form method="post">
     {% csrf_token %}
-    <h2>{{ service.name }}</h2>
+    <h2 class="text-standard">{{ service.name }}</h2>
     <div class="row service-image-banner">
         <img class="service-image" src="{{ service.image.url }}">
     </div>
     <div class="row item-container">
         <div class="col">
-            {% if service.commision_fee %}
-            <h4>Commision Fee: ${{ service.commision_fee }}</h4>
-            <h5>One time appointment fee, for on site consultation.</h5>
+            {% if service.commission_fee %}
+            <h4 class="text-standard">Commission Fee: ${{ service.commission_fee }}</h4>
+            <h5 class="text-standard">One time appointment fee, for on site consultation.</h5>
             {% endif %}
             {% if service.price_range %}
-            <h4>Price Range: ${{ service.price_range }}</h4>
+            <h4 class="text-standard">Price Range: ${{ service.price_range }}</h4>
             {% endif %}
-            <h4>{% if service.stock %}stock: {{ service.stock }}{% elif service.stock == 0 %}Out of Stock{% else %}In Stock{% endif %}</h4>
-            <p>{{ service.description }}</p>
+            <h4 class="text-standard">{% if service.stock %}stock: {{ service.stock }}{% elif service.stock == 0 %}Out of Stock{% else %}In Stock{% endif %}</h4>
+            <p class="text-standard serv-p-font">{{ service.description }}</p>
             {% if service.extras %}
             <p>
-                <label>extras:</label>
+                <label class="text-standard">extras:</label>
                 <select name="extras">
                     {% for extra in service.extras %}
                     <option value="{{ extra }}">{{ extra }}</option>
@@ -32,27 +32,27 @@
             </p>
             {% endif %}
             {% if service.requires_description %}
-            <p>Please provide a detailed description:</p>
+            <p class="text-standard serv-section-font">Please provide a detailed description:</p>
             <textarea name="description" rows="6" cols="40" placeholder="Your description here..." required>
             </textarea>
             {% endif %}
         </div>
         <div class="col">
             <div class="nativeDateTimePicker">
-                <label for="party">Select a time for this service:</label>
-                <input type="datetime-local" id="party" name="bday">
+                <label class="text-standard serv-section-font">Select a time for this service:</label>
+                <input type="datetime-local">
                 <span class="validity"></span>
             </div>
-            <p class="fallbackLabel">Select a time for this service:</p>
+            <p class="fallbackLabel text-standard serv-section-font">Select a time for this service:</p>
             <div class="fallbackDateTimePicker">
                 <div>
                   <span>
-                    <label for="day">Day:</label>
+                    <label class="text-standard date-picker-font" for="day">Day:</label>
                     <select id="day" name="day">
                     </select>
                   </span>
                   <span>
-                    <label for="month">Month:</label>
+                    <label class="text-standard date-picker-font" for="month">Month:</label>
                     <select id="month" name="month">
                       <option selected>January</option>
                       <option>February</option>
@@ -69,34 +69,34 @@
                     </select>
                   </span>
                   <span>
-                    <label for="year">Year:</label>
+                    <label class="text-standard date-picker-font" for="year">Year:</label>
                     <select id="year" name="year">
                     </select>
                   </span>
                 </div>
                 <div>
                   <span>
-                    <label for="hour">Hour:</label>
+                    <label class="text-standard date-picker-font" for="hour">Hour:</label>
                     <select id="hour" name="hour">
                     </select>
                   </span>
                   <span>
-                    <label for="minute">Minute:</label>
+                    <label class="text-standard date-picker-font" for="minute">Minute:</label>
                     <select id="minute" name="minute">
                     </select>
                   </span>
                 </div>
             </div>
-            <p>See calendar for openings, you will recieve an email confirming this time or to adjust if the time you select is unavailable.</p>
+            <p class="text-standard serv-p-font">See calendar for openings, you will recieve an email confirming this time or to adjust if the time you select is unavailable.</p>
             {% if service.requires_address %}
-            <p>Please provide an Address for this service:</p>
-            <input type="checkbox" name="use_acc" value="Use saved address">Use saved address<br>
-            Address Line 1:<input type="text" name="Address1"><br>
-            Address Line 2:<input type="text" name="Address2"><br>
-            City:<input type="text" name="City"><br>
-            State:<input type="text" name="State"><br>
-            Zip Code:<input type="text" name="Zip"><br>
-            <p>*Services only available within 50 miles of shop.</p>
+            <p class="text-standard serv-section-font">Please provide an Address for this service:</p>
+            <input class="text-standard" type="checkbox" name="use_acc" value="Use saved address">Use saved address<br>
+            <label class="text-standard">Address Line 1:</label><input type="text" name="Address1"><br>
+            <label class="text-standard">Address Line 2:</label><input type="text" name="Address2"><br>
+            <label class="text-standard">City:</label><input type="text" name="City"><br>
+            <label class="text-standard">State:</label><input type="text" name="State"><br>
+            <label class="text-standard">Zip Code:</label><input type="text" name="Zip"><br>
+            <p class="text-standard serv-p-font">* Services only available within 50 miles of shop.</p>
             {% endif %}
             {% if service.requires_pictures %}
             <input type="file" name="pic1" required>
@@ -107,43 +107,43 @@
         </div>
         <div class="w-100">
         {% if service.warning %}
-        <p>*{{ service.warning }}</p>
+        <p class="text-standard serv-p-font">* {{ service.warning }}</p>
         {% endif %}
         {% if service.limitations %}
-        <p>**Limitations: {{ service.limitations }}</p>
+        <p class="text-standard serv-p-font">** Limitations: {{ service.limitations }}</p>
         {% endif %}
         </div>
     </div>
     <div class="d-flex w-100">
         {% if user.is_staff %}
-        <a class="btn btn-secondary" href="{% url 'edit_serv' service.id %}">Edit</a>
+        <a class="btn btn-secondary text-standard" href="{% url 'edit_serv' service.id %}">Edit</a>
         {% endif %}
-        <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#calendar">View Shop Calendar</button>
+        <button class="btn btn-secondary text-standard" type="button" data-toggle="modal" data-target="#calendar">View Shop Calendar</button>
         <div class="ml-auto">
         {% if user.is_authenticated %}
-        <input class="btn btn-secondary" type="submit" name="save" value="Save item for Later">
+        <input class="btn btn-secondary text-standard" type="submit" name="save" value="Save item for Later">
         {% endif %}
         {% if service.stock != 0 %}
             {% if service.is_knife %}
                 {% if user.is_authenticated %}
-                    <input class="btn btn-secondary" type="submit" name="add" value="Add to cart">
+                    <input class="btn btn-secondary text-standard" type="submit" name="add" value="Add to cart">
                 {% else %}
-                    <p>This item is a knife and requires you verify your age to purchase, please login or create an account.</p>
+                    <p class="text-standard serv-p-font">This item is a knife and requires you verify your age to purchase, please login or create an account.</p>
                 {% endif %}
             {% else %}
-                <input class="btn btn-secondary" type="submit" name="add" value="Add to cart">
+                <input class="btn btn-secondary text-standard" type="submit" name="add" value="Add to cart">
             {% endif %}
         {% elif service.stock == 0 %}
-            <p>Out of Stock</p>
+            <p class="text-standard serv-p-font">Out of Stock</p>
         {% else %}
             {% if service.is_knife %}
                 {% if user.is_authenticated %}
-                    <input class="btn btn-secondary" type="submit" name="add" value="Add to cart">
+                    <input class="btn btn-secondary text-standard" type="submit" name="add" value="Add to cart">
                 {% else %}
-                    <p>This item is a knife and requires you verify your age to purchase, please login or create an account.</p>
+                    <p class="text-standard serv-p-font">This item is a knife and requires you verify your age to purchase, please login or create an account.</p>
                 {% endif %}
             {% else %}
-                <input class="btn btn-secondary" type="submit" name="add" value="Add to cart">
+                <input class="btn btn-secondary text-standard" type="submit" name="add" value="Add to cart">
             {% endif %}
         {% endif %}
         </div>
